--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ NodeJS/Code/4. Databases/4.1. Relational/4.1.1. SQL Server/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.1. SQL Server/_Code/node_modules/
 NodeJS/Code/11. Good to Know/11.5. Nodemailer/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.4. MySQL/Code/node_modules/
+NodeJS/Code/4. Databases/4.1. Relational/4.1.3. MariaDB/Code/node_modules/
