--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ NodeJS/Code/4. Databases/4.1. Relational/4.1.1. SQL Server/_Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.2. PostgreSQL/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.3. MariaDB/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.4. MySQL/Code/node_modules/
+NodeJS/Code/4. Databases/4.4. NoSQL/4.4.1. MongoDB/Code/node_modules/
