Complete Caching Redis

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ NodeJS/Code/4. Databases/4.1. Relational/4.1.4. MySQL/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.5. SQLite/Code/node_modules/
 NodeJS/Code/4. Databases/4.4. NoSQL/4.4.1. MongoDB/Code/node_modules/
 NodeJS/Code/4. Databases/4.4. NoSQL/4.4.2. Redis/Code/node_modules/
+NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.1. Redis/Code/node_modules
