Complete Cache MemoryCache

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ NodeJS/Code/4. Databases/4.4. NoSQL/4.4.1. MongoDB/Code/node_modules/
 NodeJS/Code/4. Databases/4.4. NoSQL/4.4.2. Redis/Code/node_modules/
 NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.2. Memcached/Code/node_modules
 NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.1. Redis/Code/node_modules
+NodeJS/Code/5. Caching/5.3. Memory Cache/Code/node_modules
