--- a/NodeJS/Code/5. Caching/5.3. Memory Cache/Code/package.json
+++ b/NodeJS/Code/5. Caching/5.3. Memory Cache/Code/package.json
@@ -17,7 +17,7 @@
     "express": "^4.17.1",
     "express-ejs-extend": "0.0.1",
     "http": "0.0.1-security",
-    "memjs": "^1.2.2",
+    "memory-cache": "^0.2.0",
     "mongoose": "^5.11.10",
     "redis": "^3.0.2"
   }
