--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.2. Memcached/Code/node_modules
 NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.1. Redis/Code/node_modules
 NodeJS/Code/5. Caching/5.3. Memory Cache/Code/node_modules
 NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
+NodeJS/Code/7. Template Engines/7.4. Pug/Code/node_modules
