--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
 NodeJS/Code/7. Template Engines/7.4. Pug/Code/node_modules
 NodeJS/Code/7. Template Engines/7.5. NunjucksJS/Code/node_modules
 NodeJS/Code/11. Good to Know/11.8. Cookie/Code/node_modules
+NodeJS/Code/11. Good to Know/11.11. BodyParse/Code/node_modules
