--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ NodeJS/Code/7. Template Engines/7.2. Handlebars/Code/node_modules
 NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
 NodeJS/Code/7. Template Engines/7.4. Pug/Code/node_modules
 NodeJS/Code/7. Template Engines/7.5. NunjucksJS/Code/node_modules
+NodeJS/Code/11. Good to Know/11.3. CommanderJS/Code/node_modules
 NodeJS/Code/11. Good to Know/11.8. Cookie/Code/node_modules
 NodeJS/Code/11. Good to Know/11.10. Token/Code/node_modules
 NodeJS/Code/11. Good to Know/11.11. BodyParse/Code/node_modules
