--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ NodeJS/Code/11. Good to Know/11.3. CommanderJS/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.1. Local/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.2. Google/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.2. Google/Code/sh/env.sh
+NodeJS/Code/11. Good to Know/11.4. Passport/11.4.3. Facebook/Code/node_modules
+NodeJS/Code/11. Good to Know/11.4. Passport/11.4.3. Facebook/Code/sh/env.sh
 NodeJS/Code/11. Good to Know/11.8. Cookie/Code/node_modules
 NodeJS/Code/11. Good to Know/11.10. Token/Code/node_modules
 NodeJS/Code/11. Good to Know/11.11. BodyParse/Code/node_modules
