--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ NodeJS/Code/11. Good to Know/11.4. Passport/11.4.3. Facebook/Code/sh/env.sh
 NodeJS/Code/11. Good to Know/11.8. Cookie/Code/node_modules
 NodeJS/Code/11. Good to Know/11.10. Token/Code/node_modules
 NodeJS/Code/11. Good to Know/11.11. BodyParse/Code/node_modules
+NodeJS/Code/11. Good to Know/11.9. Session/Code/node_modules
