--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,5 @@ NodeJS/Code/11. Good to Know/11.9. Session/Code/node_modules
 NodeJS/Code/11. Good to Know/11.10. Token/Code/node_modules
 NodeJS/Code/11. Good to Know/11.11. BodyParse/Code/node_modules
 NodeJS/Code/11. Good to Know/11.13. Two-Factor Authentication/Code/node_modules
+NodeJS/Code/11. Good to Know/11.16. UploadSingleFile/Code/node_modules
 NodeJS/Code/11. Good to Know/11.17. UploadMultipleFile/Code/node_modules
