--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 NodeJS/Code/11. Good to Know/11.5. Nodemailer/Code/node_modules/
+NodeJS/Code/3. Web Frameworks/3.2. ExpressJS/Code/node_modules/
 NodeJS/Code/3. Web Frameworks/3.1. No/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.1. SQL Server/Code/node_modules/
 NodeJS/Code/4. Databases/4.1. Relational/4.1.1. SQL Server/_Code/node_modules/
