--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.2. Memcached/Code/node_modules
 NodeJS/Code/5. Caching/5.2. Distributed Cache/5.2.1. Redis/Code/node_modules
 NodeJS/Code/5. Caching/5.3. Memory Cache/Code/node_modules
 NodeJS/Code/6. Logging/6.1. Log Frameworks/6.1.1. Node-Loggly/Code/node_modules/
+NodeJS/Code/6. Logging/6.1. Log Frameworks/6.1.2. Winston/Code/node_modules
 NodeJS/Code/7. Template Engines/7.1. MustacheJS/Code/node_modules
 NodeJS/Code/7. Template Engines/7.2. Handlebars/Code/node_modules
 NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
