--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ NodeJS/Code/5. Caching/5.3. Memory Cache/Code/node_modules
 NodeJS/Code/6. Logging/6.1. Log Frameworks/6.1.1. Node-Loggly/Code/node_modules/
 NodeJS/Code/6. Logging/6.1. Log Frameworks/6.1.2. Winston/Code/node_modules
 NodeJS/Code/6. Logging/6.1. Log Frameworks/6.1.3. Node-Bunyan/Code/node_modules
+NodeJS/Code/6. Logging/6.1. Log Frameworks/6.1.4. Morgan/Code/node_modules
 NodeJS/Code/7. Template Engines/7.1. MustacheJS/Code/node_modules
 NodeJS/Code/7. Template Engines/7.2. Handlebars/Code/node_modules
 NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
