--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ NodeJS/Code/7. Template Engines/7.2. Handlebars/Code/node_modules
 NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
 NodeJS/Code/7. Template Engines/7.4. Pug/Code/node_modules
 NodeJS/Code/7. Template Engines/7.5. NunjucksJS/Code/node_modules
+NodeJS/Code/9. Typed Superset/9.2. Flow/Code/node_modules/
 NodeJS/Code/11. Good to Know/11.3. CommanderJS/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.1. Local/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.2. Google/Code/node_modules
