--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ NodeJS/Code/10. API Clients/10.1. REST/10.1.2. Node-Rest-Client/API/node_modules
 NodeJS/Code/10. API Clients/10.1. REST/10.1.2. Node-Rest-Client/Code/node_modules/
 NodeJS/Code/10. API Clients/10.1. REST/10.1.3. Axios/Code/node_modules/
 NodeJS/Code/10. API Clients/10.1. REST/10.1.3. Axios/API/node_modules/
+NodeJS/Code/10. API Clients/10.2. GraphQL/Code/node_modules/
+NodeJS/Code/10. API Clients/10.2. GraphQL/API/node_modules
 NodeJS/Code/11. Good to Know/11.3. CommanderJS/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.1. Local/Code/node_modules
 NodeJS/Code/11. Good to Know/11.4. Passport/11.4.2. Google/Code/node_modules
