Complete Test Shopee By Selenium

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ NodeJS/Code/11. Good to Know/11.13. Two-Factor Authentication/Code/node_modules
 NodeJS/Code/11. Good to Know/11.14. DownloadSingleFile/Code/node_modules
 NodeJS/Code/11. Good to Know/11.16. UploadSingleFile/Code/node_modules
 NodeJS/Code/11. Good to Know/11.17. UploadMultipleFile/Code/node_modules
+NodeJS/Code/12.  Testing/12.2. E2E Testing/12.2.1. Selenium/Code/node_modules
+NodeJS/Code/12.  Testing/12.2. E2E Testing/12.2.1. Selenium/Code/mochawesome-report
