--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,5 @@ NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/8. API/node_modules
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/9. PageObject/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/10. ActionChains/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/11. Before_After/node_modules/
+NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/12. Each/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/Shopee/node_modules/
