Complete Selenium-Grid

--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,5 @@ NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/11. Before_After/no
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/12. Each/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/13. TestData/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/14. ExpectResult/node_modules/
+NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/15. SeleniumGrid/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/Shopee/node_modules/
