--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ NodeJS/Code/7. Template Engines/7.2. Handlebars/Code/node_modules
 NodeJS/Code/7. Template Engines/7.3. EJS/Code/node_modules
 NodeJS/Code/7. Template Engines/7.4. Pug/Code/node_modules
 NodeJS/Code/7. Template Engines/7.5. NunjucksJS/Code/node_modules
+NodeJS/Code/8. Real-Time Communication/8.1. SocketIO/Code/node_modules/
 NodeJS/Code/9. Typed Superset/9.1. TypeScript/Code/node_modules/
 NodeJS/Code/9. Typed Superset/9.2. Flow/Code/node_modules/
 NodeJS/Code/10. API Clients/10.1. REST/10.1.2. Node-Rest-Client/API/node_modules/
