--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/13. TestData/node_m
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/14. ExpectResult/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/15. SeleniumGrid/node_modules/
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/Shopee/node_modules/
+NodeJS/Code/17. Other/17.1. Bower/Code/node_modules/
+NodeJS/Code/17. Other/17.1. Bower/Code/src/public/bower_components/
