--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/15. SeleniumGrid/no
 NodeJS/Code/12. Testing/12.2. E2E Testing/12.2.1. Selenium/_/Shopee/node_modules/
 NodeJS/Code/17. Other/17.1. Bower/Code/node_modules/
 NodeJS/Code/17. Other/17.1. Bower/Code/src/public/bower_components/
+NodeJS/_Code/API/Code/node_modules/
